# RustMobileDemo

./: .gitignore  README.md  build-protos.sh
ios/RustMobileDemo/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
ios/RustMobileDemo.xcodeproj/: project.pbxproj
ios/RustMobileDemo.xcodeproj/xcshareddata/xcschemes/: RustMobileDemo.xcscheme
ios/RustMobileDemo/Base.lproj/: Main.storyboard
ios/RustMobileDemo/Protos/: viewmodels.pb.swift
protos/: viewmodels.proto
rustengine/: Cargo.toml
rustengine/header/: rust_engine_header.h
rustengine/src/: lib.rs
rustengine/src/protos/: mod.rs  viewmodels.rs
