[package]
name = "rustengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
fast_image_resize = "2.7.3"
image = "0.24.6"
libc = "0.2.139"
protobuf = "3.2.0"
reqwest = { version = "0.11.17", features = ["blocking"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
